--- a/style.css
+++ b/style.css
@@ -29,6 +29,11 @@
     color: white;
 }
 
+.nav li a:hover{
+color: gray;
+text-decoration: underline;
+}
+
 /*navbar end*/
 
 .head {
@@ -45,16 +50,19 @@
     background-repeat: no-repeat;
     background-position: center;
     color: white;
-
+    background-attachment: fixed;
 }
 
-.head_count {
-    text-align: center;
+.head h1 {
+    text-align:left;
+    font-size: 50px;
+    color:rgb(242, 240, 243);
+   
 }
 
-.head_count h1 {
-    font-size: 500px;
-
+.head p {
+  text-align: left;
+  font-size: 20px;
 }
 
 
@@ -64,7 +72,7 @@
 
     width: 78%;
     margin: auto;
-    height: 608px;
+    height: 618px;
     color: white;
     margin-top: 45px;
     margin-bottom: 45px;
@@ -77,13 +85,14 @@
 }
 
 .about_cont {
-    width: 70%;
+    width: 80%;
     margin: auto;
     font-size: 20px;
     display: flex;
    flex-wrap: wrap;
     align-items: center;
-    justify-content: center
+    justify-content: center;
+   
 }
 
 .about_cont div {
@@ -99,8 +108,16 @@
     width: 180px;
     height: 180px;
     border-radius: 150px;
+   
 
 }
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+.fade-in-image { animation: fadeIn 5s; 
+}
+
 
 @media screen and (max-width: 1100px) {
     .about {
@@ -128,9 +145,7 @@
     background-position: center;
     color: white;
     border-radius: 20px;
-
-
-
+    background-attachment: fixed;
 }
 
 .skill_sec {
@@ -174,7 +189,7 @@
 
 
 #html {
-    width: 85%;
+    width: 80%;;
     background-color: #e6e4e881;
 }
 
@@ -215,10 +230,10 @@
     width: 80%;
     margin: auto;
     height: 550px;
-
+    background-image: url(ok2.jpg);
     margin-top: 45px;
     border-radius: 20px;
-
+ 
 }
 
 body {
@@ -228,15 +243,16 @@ body {
 }
 
 .contain {
-    background-color: #eee;
+  
     max-width: 1170px;
     margin-left: auto;
     margin-right: auto;
     padding: 1em;
+
 }
 
 div.form {
-    background-color: #eee;
+ background-color: white;
 }
 
 .contact-wrapper {
@@ -260,13 +276,14 @@ div.form {
 }
 
 .highlight-text {
-    color: #421142c5;
+    color: #e8e4e8c5;
 }
 
 .hightlight-contact-info {
     font-weight: 700;
     font-size: 22px;
     line-height: 1.5;
+  
 }
 
 .highlight-text-grey {
@@ -388,3 +405,5 @@ button:focus,
 .error {
     color: #4f224fc5;
 }
+
+/*end contact*/
